fixed issue with user inventory not showing and added google fonts

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,13 +10,16 @@
 
 input {
   outline: 1px solid #ccc;
+
 }
 
 h1 {
   font-size: 4rem;
+  font-family: 'Lobster', cursive;
 }
 
 h2 {
   font-size: 2.5rem;
+  font-family: 'Lobster', cursive;
 }
 
